Bug 985988, event handlers should update preventDefault flag similar way to event.preventDefault(), r=masayuki